--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.0",
+        "jenssegers/mongodb": "3.8",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "3.2",
+        "mongodb/mongodb": "^1.13",
+        "mostafamaklad/laravel-permission-mongodb": "3.1",
         "yajra/laravel-datatables-oracle": "^9.7"
+    },"provide" : {
+        "ext-mongodb": "*"
     },
 "require-dev": {
         "guzzlehttp/guzzle":"^7.0.1",
@@ -39,7 +44,8 @@
         "psr-4": {
                 "App\\": "app/",
                 "Database\\Factories\\": "database/factories/",
-                "Database\\Seeders\\": "database/seeders/"
+                "Database\\Seeders\\": "database/seeders/",
+                "Jenssegers\\Mongodb\\": "src/"
         }
         
     },
@@ -47,6 +53,9 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
+    },"suggest": {
+        "jenssegers/mongodb-session": "Add MongoDB session support to Laravel-MongoDB",
+        "jenssegers/mongodb-sentry": "Add Sentry support to Laravel-MongoDB"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
