--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
         "popper.js": "^1.12",
         "postcss-custom-properties": "^12.1.8",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.2",
+        "@font-awesome": "^4.7.0"
     }
 }
