front:vista usercreate

--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.2",
-        "@font-awesome": "^4.7.0"
+        "materialize-css": "^1.0.0-rc.2"
     }
 }
